--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,23 @@ python:
 install:
   - python -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/master/scripts/get-platformio.py)"
 
+sudo: false
+cache:
+    directories:
+        - "~/.platformio"
+
+env:
+  - PLATFORMIO_CI_SRC=examples/accel/accel.ino
+  - PLATFORMIO_CI_SRC=examples/circle/circle.ino
+  - PLATFORMIO_CI_SRC=examples/fade/fade.ino
+  - PLATFORMIO_CI_SRC=examples/feeling/feeling.ino
+  - PLATFORMIO_CI_SRC=examples/led/led.ino
+  - PLATFORMIO_CI_SRC=examples/random/random.ino
+  - PLATFORMIO_CI_SRC=examples/tap/tap.ino
+  - PLATFORMIO_CI_SRC=examples/template/template.ino
+  - PLATFORMIO_CI_SRC=examples/threshold/threshold.ino
+
+
+
 script:
-  - platformio ci examples/accel/accel.ino --board=pro8MHzatmega328
-  - platformio ci examples/circle/circle.ino --board=pro8MHzatmega328
-  - platformio ci examples/fade/fade.ino --board=pro8MHzatmega328
-  - platformio ci examples/feeling/feeling.ino --board=pro8MHzatmega328
-  - platformio ci examples/led/led.ino --board=pro8MHzatmega328
-  - platformio ci examples/random/random.ino --board=pro8MHzatmega328
-  - platformio ci examples/tap/tap.ino --board=pro8MHzatmega328
-  - platformio ci examples/template/template.ino --board=pro8MHzatmega328
-  - platformio ci examples/threshold/threshold.ino --board=pro8MHzatmega328
+  - platformio ci --lib="../" --board=pro8MHzatmega328
