--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ install:
     - pip install -U platformio
 
 script:
-    - platformio ci --board=pro8MHzatmega328
+    - platformio ci --lib="." --board=pro8MHzatmega328
