--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
   - tar xf arduino-1.6.6-linux64.tar.xz
   - sudo mv arduino-1.6.6 /usr/local/share/arduino
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
-  - git clone git@github.com:adafruit/Adafruit_NeoPixel.git /usr/local/share/arduino/libraries/
-  - git clone git@github.com:kyontan/adxl345driver.git /usr/local/share/arduino/libraries/
+  - git clone --depth 1 git@github.com:adafruit/Adafruit_NeoPixel.git /usr/local/share/arduino/libraries/Adafruit_NeoPixel
+  - git clone --depth 1 git@github.com:kyontan/adxl345driver.git /usr/local/share/arduino/libraries/adxl345driver
 
 install:
   - ln -s $PWD /usr/local/share/arduino/libraries/Helper2.h
