--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
 language: c++
+
+env:
+  - EXAMPLE_NAME='accel'
+  - EXAMPLE_NAME='circle'
+  - EXAMPLE_NAME='fade'
+  - EXAMPLE_NAME='feeling'
+  - EXAMPLE_NAME='led'
+  - EXAMPLE_NAME='random'
+  - EXAMPLE_NAME='tap'
+  - EXAMPLE_NAME='template'
+  - EXAMPLE_NAME='threshold'
+
 before_install:
   - /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_1.pid --make-pidfile
     --background --exec /usr/bin/Xvfb -- :1 -ac -screen 0 1280x1024x16
@@ -8,22 +20,18 @@ before_install:
   - tar xf arduino-1.6.6-linux64.tar.xz
   - sudo mv arduino-1.6.6 /usr/local/share/arduino
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
-  - git clone --depth 1 git@github.com:adafruit/Adafruit_NeoPixel.git /usr/local/share/arduino/libraries/Adafruit_NeoPixel
+  - 
   - git clone --depth 1 git@github.com:kyontan/adxl345driver.git /usr/local/share/arduino/libraries/adxl345driver
 
 install:
   - ln -s $PWD /usr/local/share/arduino/libraries/Helper2.h
+  - wget https://github.com/kyontan/adxl345driver/archive/master.zip -O /tmp/adxl345driver.zip
+  - unzip /tmp/adxl345driver.zip -d /usr/local/share/arduino/libraries
+  - wget https://github.com/adafruit/Adafruit_NeoPixel/archive/master.zip -O /tmp/Adafruit_NeoPixel.zip
+  - unzip /tmp/Adafruit_NeoPixel.zip -d /usr/local/share/arduino/libraries
 
 script:
-  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/accel/accel.ino
-  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/circle/circle.ino
-  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/fade/fade.ino
-  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/feeling/feeling.ino
-  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/led/led.ino
-  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/random/random.ino
-  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/tap/tap.ino
-  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/template/template.ino
-  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/threshold/threshold.ino
+  - arduino --verify --board arduino:avr:pro:cpu=8MHzatmega328 $PWD/examples/$EXAMPLE_NAME/$EXAMPLE_NAME.ino
 
 notifications:
   slack:
