change mail address

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=GOLD-BUG MK.1
 version=0.1.0
 author=uec-giken
-email=uec-giken@gmail.com
+email=uec.giken@gmail.com
 sentence=teaching materials for programming beginers with simple hardware
 paragraph=It has 2 LEDs and a acceleration sensor. We can tell you rightly about three basic laws of programming.
 url=http://giken.uec.tokyo/
